libtorrent/c/libtorrent.h

enum tags
{
	TAG_END = 0,

	SES_FINGERPRINT, // char const*, 2 character string
	SES_LISTENPORT, // int
	SES_LISTENPORT_END, // int
	SES_VERSION_MAJOR, // int
	SES_VERSION_MINOR, // int
	SES_VERSION_TINY, // int
	SES_VERSION_TAG, // int
	SES_FLAGS, // int
	SES_ALERT_MASK, // int
	SES_LISTEN_INTERFACE, // char const*

	// === add_torrent tags ===

	// identifying the torrent to add
	TOR_FILENAME = 0x100, // char const*
	TOR_TORRENT, // char const*, specify size of buffer with TOR_TORRENT_SIZE
	TOR_TORRENT_SIZE, // int
	TOR_INFOHASH, // char const*, must point to a 20 byte array
	TOR_INFOHASH_HEX, // char const*, must point to a 40 byte string
	TOR_MAGNETLINK, // char const*, url

	TOR_TRACKER_URL, // char const*
	TOR_RESUME_DATA, // char const*
	TOR_RESUME_DATA_SIZE, // int
	TOR_SAVE_PATH, // char const*
	TOR_NAME, // char const*
	TOR_PAUSED, // int
	TOR_AUTO_MANAGED, // int
	TOR_DUPLICATE_IS_ERROR, // int
	TOR_USER_DATA, //void*
	TOR_SEED_MODE, // int
	TOR_OVERRIDE_RESUME_DATA, // int
	TOR_STORAGE_MODE, // int

	SET_UPLOAD_RATE_LIMIT = 0x200, // int
	SET_DOWNLOAD_RATE_LIMIT, // int
	SET_LOCAL_UPLOAD_RATE_LIMIT, // int
	SET_LOCAL_DOWNLOAD_RATE_LIMIT, // int
	SET_MAX_UPLOAD_SLOTS, // int
	SET_MAX_CONNECTIONS, // int
	SET_SEQUENTIAL_DOWNLOAD, // int, torrent only
	SET_SUPER_SEEDING, // int, torrent only
	SET_HALF_OPEN_LIMIT, // int, session only
	SET_PEER_PROXY, // proxy_setting const*, session_only
	SET_WEB_SEED_PROXY, // proxy_setting const*, session_only
	SET_TRACKER_PROXY, // proxy_setting const*, session_only
	SET_DHT_PROXY, // proxy_setting const*, session_only
	SET_PROXY, // proxy_setting const*, session_only
	SET_ALERT_MASK,
// int, session_only
};
enum state_t
{
	queued_for_checking,
	checking_files,
	downloading_metadata,
	downloading,
	finished,
	seeding,
	allocating,
	checking_resume_data
};
struct torrent_status
{
	enum state_t state;
	int paused;
	float progress;
	char error[1024];
	int next_announce;
	int announce_interval;
	char current_tracker[512];
	long long total_download;
	long long total_upload;
	long long total_payload_download;
	long long total_payload_upload;
	long long total_failed_bytes;
	long long total_redundant_bytes;
	float download_rate;
	float upload_rate;
	float download_payload_rate;
	float upload_payload_rate;
	int num_seeds;
	int num_peers;
	int num_complete;
	int num_incomplete;
	int list_seeds;
	int list_peers;
	int connect_candidates;

	// what to do?
//	bitfield pieces;

	int num_pieces;
	long long total_done;
	long long total_wanted_done;
	long long total_wanted;
	float distributed_copies;
	int block_size;
	int num_uploads;
	int num_connections;
	int uploads_limit;
	int connections_limit;
//	enum storage_mode_t storage_mode;
	int up_bandwidth_queue;
	int down_bandwidth_queue;
	long long all_time_upload;
	long long all_time_download;
	int active_time;
	int seeding_time;
	int seed_rank;
	int last_scrape;
	int has_incoming;
	int sparse_regions;
	int seed_mode;
};
struct session_status
{
	int has_incoming_connections;

	float upload_rate;
	float download_rate;
	long long total_download;
	long long total_upload;

	float payload_upload_rate;
	float payload_download_rate;
	long long total_payload_download;
	long long total_payload_upload;

	float ip_overhead_upload_rate;
	float ip_overhead_download_rate;
	long long total_ip_overhead_download;
	long long total_ip_overhead_upload;

	float dht_upload_rate;
	float dht_download_rate;
	long long total_dht_download;
	long long total_dht_upload;

	float tracker_upload_rate;
	float tracker_download_rate;
	long long total_tracker_download;
	long long total_tracker_upload;

	long long total_redundant_bytes;
	long long total_failed_bytes;

	int num_peers;
	int num_unchoked;
	int allowed_upload_slots;

	int up_bandwidth_queue;
	int down_bandwidth_queue;

	int up_bandwidth_bytes_queue;
	int down_bandwidth_bytes_queue;

	int optimistic_unchoke_counter;
	int unchoke_counter;

	int dht_nodes;
	int dht_node_cache;
	int dht_torrents;
	long long dht_global_nodes;
//	std::vector<dht_lookup> active_requests;
};
// alerts

enum alert_type
{
	at_torrent_alert,
	at_peer_alert,
	at_tracker_alert,
	at_read_piece_alert,
	at_file_completed_alert,
	at_file_renamed_alert,
	at_file_rename_failed_alert,
	at_performance_alert,
	at_state_changed_alert,
	at_tracker_error_alert,
	at_tracker_warning_alert,
	at_scrape_reply_alert,
	at_scrape_failed_alert,
	at_tracker_reply_alert,
	at_dht_reply_alert,
	at_tracker_announce_alert,
	at_hash_failed_alert,
	at_peer_ban_alert,
	at_peer_unsnubbed_alert,
	at_peer_snubbed_alert,
	at_peer_error_alert,
	at_peer_connect_alert,
	at_peer_disconnected_alert,
	at_invalid_request_alert,
	at_torrent_finished_alert,
	at_piece_finished_alert,
	at_request_dropped_alert,
	at_block_timeout_alert,
	at_block_finished_alert,
	at_block_downloading_alert,
	at_unwanted_block_alert,
	at_storage_moved_alert,
	at_storage_moved_failed_alert,
	at_torrent_deleted_alert,
	at_torrent_delete_failed_alert,
	at_save_resume_data_alert,
	at_save_resume_data_failed_alert,
	at_torrent_paused_alert,
	at_torrent_resumed_alert,
	at_torrent_checked_alert,
	at_url_seed_alert,
	at_file_error_alert,
	at_metadata_failed_alert,
	at_metadata_received_alert,
	at_udp_error_alert,
	at_external_ip_alert,
	at_listen_failed_alert,
	at_listen_succeeded_alert,
	at_portmap_error_alert,
	at_portmap_alert,
	at_portmap_log_alert,
	at_fastresume_rejected_alert,
	at_peer_blocked_alert,
	at_dht_announce_alert,
	at_dht_get_peers_alert,
	at_stats_alert,
	at_cache_flushed_alert,
	at_alert
};
enum stats_channel
{
	upload_payload,
	upload_protocol,
	upload_ip_protocol,
	upload_dht_protocol,
	upload_tracker_protocol,
	download_payload,
	download_protocol,
	download_ip_protocol,
	download_dht_protocol,
	download_tracker_protocol,
	stats_channel_max
};
// the functions whose signature ends with:
// , int first_tag, ...);
// takes a tag list. The tag list is a series
// of tag-value pairs. The tags are constants
// identifying which property the value controls.
// The type of the value varies between tags.
// The enumeration above specifies which type
// it expects. All tag lists must always be
// terminated by TAG_END.

// use SES_* tags in tag list
void* session_create(int first_tag, ...);
void session_close(void* ses);
// use TOR_* tags in tag list
void* session_add_torrent(void* ses, int first_tag, ...);
void* session_add_torrent_data(void* ses, void* resume, int resume_size, const char *target);
enum session_remove_options
{
	none = 0, delete_files = 1
};
void session_remove_torrent(void* ses, void* tor, int options);
int session_get_status(void* ses, struct session_status* s, int struct_size);
// use SET_* tags in tag list
int session_set_settings(void* ses, int first_tag, ...);
int session_get_setting(void* ses, int tag, void* value, int* value_size);
// call session_wait_alert or session_pop_alert, and then cast_to_ or session_free_alert
void* session_wait_alert(void* ses);
void* session_pop_alert(void* ses);
void session_free_alert(void* pop);
//
// torrent_*
//

int torrent_get_status(void* tor, struct torrent_status* s, int struct_size);