src/main/java/com/github/axet/torrent/rasterbar/TorrentLibrary.java

		/// <i>native declaration : c/libtorrent.h:224</i>
		public static final int at_tracker_alert = (int)2;
		/// <i>native declaration : c/libtorrent.h:225</i>
		public static final int at_read_piece_alert = (int)3;
		/// <i>native declaration : c/libtorrent.h:226</i>
		public static final int at_file_completed_alert = (int)4;
		/// <i>native declaration : c/libtorrent.h:227</i>
		public static final int at_file_renamed_alert = (int)5;
		/// <i>native declaration : c/libtorrent.h:228</i>
		public static final int at_file_rename_failed_alert = (int)6;
		/// <i>native declaration : c/libtorrent.h:229</i>
		public static final int at_performance_alert = (int)7;
		/// <i>native declaration : c/libtorrent.h:230</i>
		public static final int at_state_changed_alert = (int)8;
		/// <i>native declaration : c/libtorrent.h:231</i>
		public static final int at_tracker_error_alert = (int)9;
		/// <i>native declaration : c/libtorrent.h:232</i>
		public static final int at_tracker_warning_alert = (int)10;
		/// <i>native declaration : c/libtorrent.h:233</i>
		public static final int at_scrape_reply_alert = (int)11;
		/// <i>native declaration : c/libtorrent.h:234</i>
		public static final int at_scrape_failed_alert = (int)12;
		/// <i>native declaration : c/libtorrent.h:235</i>
		public static final int at_tracker_reply_alert = (int)13;
		/// <i>native declaration : c/libtorrent.h:236</i>
		public static final int at_dht_reply_alert = (int)14;
		/// <i>native declaration : c/libtorrent.h:237</i>
		public static final int at_tracker_announce_alert = (int)15;
		/// <i>native declaration : c/libtorrent.h:238</i>
		public static final int at_hash_failed_alert = (int)16;
		/// <i>native declaration : c/libtorrent.h:239</i>
		public static final int at_peer_ban_alert = (int)17;
		/// <i>native declaration : c/libtorrent.h:240</i>
		public static final int at_peer_unsnubbed_alert = (int)18;
		/// <i>native declaration : c/libtorrent.h:241</i>
		public static final int at_peer_snubbed_alert = (int)19;
		/// <i>native declaration : c/libtorrent.h:242</i>
		public static final int at_peer_error_alert = (int)20;
		/// <i>native declaration : c/libtorrent.h:243</i>
		public static final int at_peer_connect_alert = (int)21;
		/// <i>native declaration : c/libtorrent.h:244</i>
		public static final int at_peer_disconnected_alert = (int)22;
		/// <i>native declaration : c/libtorrent.h:245</i>
		public static final int at_invalid_request_alert = (int)23;
		/// <i>native declaration : c/libtorrent.h:246</i>
		public static final int at_torrent_finished_alert = (int)24;
		/// <i>native declaration : c/libtorrent.h:247</i>
		public static final int at_piece_finished_alert = (int)25;
		/// <i>native declaration : c/libtorrent.h:248</i>
		public static final int at_request_dropped_alert = (int)26;
		/// <i>native declaration : c/libtorrent.h:249</i>
		public static final int at_block_timeout_alert = (int)27;
		/// <i>native declaration : c/libtorrent.h:250</i>
		public static final int at_block_finished_alert = (int)28;
		/// <i>native declaration : c/libtorrent.h:251</i>
		public static final int at_block_downloading_alert = (int)29;
		/// <i>native declaration : c/libtorrent.h:252</i>
		public static final int at_unwanted_block_alert = (int)30;
		/// <i>native declaration : c/libtorrent.h:253</i>
		public static final int at_storage_moved_alert = (int)31;
		/// <i>native declaration : c/libtorrent.h:254</i>
		public static final int at_storage_moved_failed_alert = (int)32;
		/// <i>native declaration : c/libtorrent.h:255</i>
		public static final int at_torrent_deleted_alert = (int)33;
		/// <i>native declaration : c/libtorrent.h:256</i>
		public static final int at_torrent_delete_failed_alert = (int)34;
		/// <i>native declaration : c/libtorrent.h:257</i>
		public static final int at_save_resume_data_alert = (int)35;
		/// <i>native declaration : c/libtorrent.h:258</i>
		public static final int at_save_resume_data_failed_alert = (int)36;
		/// <i>native declaration : c/libtorrent.h:259</i>
		public static final int at_torrent_paused_alert = (int)37;
		/// <i>native declaration : c/libtorrent.h:260</i>
		public static final int at_torrent_resumed_alert = (int)38;
		/// <i>native declaration : c/libtorrent.h:261</i>
		public static final int at_torrent_checked_alert = (int)39;
		/// <i>native declaration : c/libtorrent.h:262</i>
		public static final int at_url_seed_alert = (int)40;
		/// <i>native declaration : c/libtorrent.h:263</i>
		public static final int at_file_error_alert = (int)41;
		/// <i>native declaration : c/libtorrent.h:264</i>
		public static final int at_metadata_failed_alert = (int)42;
		/// <i>native declaration : c/libtorrent.h:265</i>
		public static final int at_metadata_received_alert = (int)43;
		/// <i>native declaration : c/libtorrent.h:266</i>
		public static final int at_udp_error_alert = (int)44;
		/// <i>native declaration : c/libtorrent.h:267</i>
		public static final int at_external_ip_alert = (int)45;
		/// <i>native declaration : c/libtorrent.h:268</i>
		public static final int at_listen_failed_alert = (int)46;
		/// <i>native declaration : c/libtorrent.h:269</i>
		public static final int at_listen_succeeded_alert = (int)47;
		/// <i>native declaration : c/libtorrent.h:270</i>
		public static final int at_portmap_error_alert = (int)48;
		/// <i>native declaration : c/libtorrent.h:271</i>
		public static final int at_portmap_alert = (int)49;
		/// <i>native declaration : c/libtorrent.h:272</i>
		public static final int at_portmap_log_alert = (int)50;
		/// <i>native declaration : c/libtorrent.h:273</i>
		public static final int at_fastresume_rejected_alert = (int)51;
		/// <i>native declaration : c/libtorrent.h:274</i>
		public static final int at_peer_blocked_alert = (int)52;
		/// <i>native declaration : c/libtorrent.h:275</i>
		public static final int at_dht_announce_alert = (int)53;
		/// <i>native declaration : c/libtorrent.h:276</i>
		public static final int at_dht_get_peers_alert = (int)54;
		/// <i>native declaration : c/libtorrent.h:277</i>
		public static final int at_stats_alert = (int)55;
		/// <i>native declaration : c/libtorrent.h:278</i>
		public static final int at_cache_flushed_alert = (int)56;
		/// <i>native declaration : c/libtorrent.h:279</i>
		public static final int at_alert = (int)57;
	};
	/**
	 * <i>native declaration : c/libtorrent.h:524</i><br>
	 * enum values
	 */
	/**
	 * <i>native declaration : c/libtorrent.h:524</i><br>
	 * enum values
	 */
	public static interface stats_channel {
		/// <i>native declaration : c/libtorrent.h:513</i>
		public static final int upload_payload = (int)0;
		/// <i>native declaration : c/libtorrent.h:514</i>
		public static final int upload_protocol = (int)1;
		/// <i>native declaration : c/libtorrent.h:515</i>
		public static final int upload_ip_protocol = (int)2;
		/// <i>native declaration : c/libtorrent.h:516</i>
		public static final int upload_dht_protocol = (int)3;
		/// <i>native declaration : c/libtorrent.h:517</i>
		public static final int upload_tracker_protocol = (int)4;
		/// <i>native declaration : c/libtorrent.h:518</i>
		public static final int download_payload = (int)5;
		/// <i>native declaration : c/libtorrent.h:519</i>
		public static final int download_protocol = (int)6;
		/// <i>native declaration : c/libtorrent.h:520</i>
		public static final int download_ip_protocol = (int)7;
		/// <i>native declaration : c/libtorrent.h:521</i>
		public static final int download_dht_protocol = (int)8;
		/// <i>native declaration : c/libtorrent.h:522</i>
		public static final int download_tracker_protocol = (int)9;
		/// <i>native declaration : c/libtorrent.h:523</i>
		public static final int stats_channel_max = (int)10;
	};
	/**
	 * <i>native declaration : c/libtorrent.h:605</i><br>
	 * enum values
	 */
	/**
	 * <i>native declaration : c/libtorrent.h:605</i><br>
	 * enum values
	 */
	public static interface session_remove_options {
		/// <i>native declaration : c/libtorrent.h:603</i>
		public static final int none = (int)0;
		/// <i>native declaration : c/libtorrent.h:604</i>
		public static final int delete_files = (int)1;
	};
	/**
	 * use SES_* tags in tag list<br>
	 * Original signature : <code>void* session_create(int, null)</code><br>
	 * <i>native declaration : c/libtorrent.h:592</i>
	 */
	Pointer session_create(int first_tag, Object... varargs);
	/**
	 * Original signature : <code>void session_close(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:594</i>
	 */
	void session_close(Pointer ses);
	/**
	 * use TOR_* tags in tag list<br>
	 * Original signature : <code>void* session_add_torrent(void*, int, null)</code><br>
	 * <i>native declaration : c/libtorrent.h:599</i>
	 */
	Pointer session_add_torrent(Pointer ses, int first_tag, Object... varargs);
	/**
	 * Original signature : <code>void* session_add_torrent_data(void*, void*, int, const char*)</code><br>
	 * <i>native declaration : c/libtorrent.h:601</i><br>
	 * @deprecated use the safer methods {@link #session_add_torrent_data(com.sun.jna.Pointer, com.sun.jna.Pointer, int, java.lang.String)} and {@link #session_add_torrent_data(com.sun.jna.Pointer, com.sun.jna.Pointer, int, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	Pointer session_add_torrent_data(Pointer ses, Pointer resume, int resume_size, Pointer target);
	/**
	 * Original signature : <code>void* session_add_torrent_data(void*, void*, int, const char*)</code><br>
	 * <i>native declaration : c/libtorrent.h:601</i>
	 */
	Pointer session_add_torrent_data(Pointer ses, Pointer resume, int resume_size, String target);
	/**
	 * Original signature : <code>void session_remove_torrent(void*, void*, int)</code><br>
	 * <i>native declaration : c/libtorrent.h:607</i>
	 */
	void session_remove_torrent(Pointer ses, Pointer tor, int options);
	/**
	 * Original signature : <code>int session_get_status(void*, session_status*, int)</code><br>
	 * <i>native declaration : c/libtorrent.h:609</i>
	 */
	int session_get_status(Pointer ses, session_status s, int struct_size);
	/**
	 * use SET_* tags in tag list<br>
	 * Original signature : <code>int session_set_settings(void*, int, null)</code><br>
	 * <i>native declaration : c/libtorrent.h:614</i>
	 */
	int session_set_settings(Pointer ses, int first_tag, Object... varargs);
	/**
	 * Original signature : <code>int session_get_setting(void*, int, void*, int*)</code><br>
	 * <i>native declaration : c/libtorrent.h:616</i><br>
	 * @deprecated use the safer methods {@link #session_get_setting(com.sun.jna.Pointer, int, com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #session_get_setting(com.sun.jna.Pointer, int, com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	int session_get_setting(Pointer ses, int tag, Pointer value, IntByReference value_size);
	/**
	 * Original signature : <code>int session_get_setting(void*, int, void*, int*)</code><br>
	 * <i>native declaration : c/libtorrent.h:616</i>
	 */
	int session_get_setting(Pointer ses, int tag, Pointer value, IntBuffer value_size);
	/**
	 * call session_wait_alert or session_pop_alert, and then cast_to_ or session_free_alert<br>
	 * Original signature : <code>void* session_wait_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:621</i>
	 */
	Pointer session_wait_alert(Pointer ses);
	/**
	 * Original signature : <code>void* session_pop_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:623</i>
	 */
	Pointer session_pop_alert(Pointer ses);
	/**
	 * Original signature : <code>void session_free_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:625</i>
	 */
	void session_free_alert(Pointer pop);
	/**
	 * Original signature : <code>int torrent_get_status(void*, torrent_status*, int)</code><br>
	 * <i>native declaration : c/libtorrent.h:627</i>
	 */
	int torrent_get_status(Pointer tor, torrent_status s, int struct_size);
